fixed sticky behavior on mobile

--- a/components/insights/grid.module.css
+++ b/components/insights/grid.module.css
@@ -67,14 +67,18 @@
 }
 
 .symbolCell {
-  display: flex;
-  align-items: center;
-  color: black !important;
   padding-left: 5px !important; 
   padding-right: 5px !important; 
 }
 
-:global(.dark-mode) .symbolCell {
+.symbolCell div {
+  display: flex;
+  align-items: center;
+  color: black !important;
+  
+}
+
+:global(.dark-mode) .symbolCell div {
   color: white !important;
 }
 
